tests/rosetta/out/Smalltalk/box-the-compass.out
/tmp/box-the-compass.st:6: parse error, expected ']'
